[package]
name = "ford"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
sqlx = { version = "0.7.3", features = [ "postgres", "runtime-tokio", "uuid", "chrono", "macros" ]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde-aux = "4.3.1"
tracing-subscriber = "0.3.18"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
scraper = "0.18.1"
futures = "0.3.29"
axum-macros = "0.4.0"
tokio-cron-scheduler = "0.9.4"
ford_derive = { path = "./ford_derive" }
